documentation.combinedJavadoc task refactored and improved